🦂💨 Updated with Glitch - final cleanup

--- a/views/pug/index.pug
+++ b/views/pug/index.pug
@@ -28,6 +28,8 @@ html
           input(type='password', name='password')
         div
           input(type='submit', value='Log In')
+      div
+        a(href='/auth/github') Login With Github
           
     if showRegistration
       hr
